# Greek-Poetry

./: Analysis of Accentual Responsion.ipynb  AssessAccentResponsion.py  Assessing Meter stuff.py  Check_capitalization_effect.py  Digital Classicist London Demo.ipynb  E_directoryHeracles-analysis.txt  Her-Stas1-Refrain.py  LICENSE.txt  MAIN.py  MakerSpaces2024.ipynb  MakerSpacesDemo  README.md  accents.py  circumflex_stats.py  class_StanzaGroup.py  class_line.py  class_meter_dict.py  class_play.py  class_stanza.py  class_syllable.py  class_word.py  constants-UNUSED.py  graph_tools.py  greek_prosody.py  pyproject.toml  search_tragedy.py  testing.py
.ipynb_checkpoints/: Analysis of Accentual Responsion-checkpoint.ipynb  MakerSpaces2024-checkpoint.ipynb
Additional Research Tools/: AssessAccentResponsion  Assessing Meter stuff.py  class_meter_dict.py  parsons.py
Analysis/: __init__.py  analyze_tag.py  class_StanzaGroup.py  class_author.py  class_genre.py  class_line.py  class_play.py  class_play_OLD.py  class_stanza.py  class_syllable.py  class_word.py
Greek_Poetry_consera.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Greek_Prosody/: __init__.py  accents.py  characters.py  dict_notes.txt  greek_prosody.py  prosody.py  scan_trimeter.py  scanner.py  scansion_dict-Backup.py  scansion_dict.py  scansion_dict_notes.txt  syllables.py  trimeter.py
Greek_Prosody/Pickled/: scansion_dict.pkl  simple_dict.pkl  text_list_trimeter.pkl
Utilities/: __init__.py  class_texts.py  graph_tools.py  identical_lines.py  preprocess_greek.py  process_OCT.py  process_OCT_Eur.py  quick_tools.py  reformat_csv_files.py  resp_check_csvs.py  responsion_old.py  responsion_old_recovered.py  responsion_troubleshooting  stanza_utilities.py
(+16 files in other folders)
