{\rtf1\ansi\ansicpg1252\cocoartf2757
\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
{\colortbl;\red255\green255\blue255;}
{\*\expandedcolortbl;;}
\margl1440\margr1440\vieww11520\viewh8400\viewkind0
\pard\tx720\tx1440\tx2160\tx2880\tx3600\tx4320\tx5040\tx5760\tx6480\tx7200\tx7920\tx8640\pardirnatural\partightenfactor0

\f0\fs24 \cf0 [build-system]\
requires = ["hatchling"]\
build-backend = "hatchling.build"\
\
[project]\
name = "Greek_Poetry_consera\'94\
version = "0.0.1"\
authors = [\
  \{ name=\'93Anna Conser\'94, email=\'93anna.conser@uc.edu\'94 \},\
]\
description = \'93Tools for the analysis of sound patterning in Greek Poetry\'94 \
readme = "README.md"\
requires-python = ">=3.8"\
classifiers = [\
    "Programming Language :: Python :: 3",\
    "License :: OSI Approved :: MIT License",\
    "Operating System :: Mac OS",\
]\
\
[project.urls]\
Homepage = "https://github.com/consera/Greek-Poetry\'94\
Issues = "https://github.com/consera/Greek-Poetry/issues"}