[project]
name = "Greek-Poetry_consera"
version = "0.0.1"
authors = [
  { name="Anna Conser", email="anna.conser@uc.edu" },
]
description = "Tools for analyzing sound patterning in ancient Greek poetry"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/consera/Greek-Poetry"
Issues = "https://github.com/consera/Greek-Poetry/issues"

[tool.setuptools]
packages = ["Analysis", "Utilities", "Greek_Prosody"]